<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/problem__view" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/key_1"
                android:textSize="26sp"
                android:text="@string/key_1"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_2"
                android:textSize="26sp"
                android:text="@string/key_2"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_3"
                android:textSize="26sp"
                android:text="@string/key_3"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/key_4"
                android:textSize="26sp"
                android:text="@string/key_4"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_5"
                android:textSize="26sp"
                android:text="@string/key_5"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_6"
                android:textSize="26sp"
                android:text="@string/key_6"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/key_7"
                android:textSize="26sp"
                android:text="@string/key_7"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_8"
                android:textSize="26sp"
                android:text="@string/key_8"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_9"
                android:textSize="26sp"
                android:text="@string/key_9"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/reserved"
                android:textSize="26sp"
                android:text="@string/reserved"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_0"
                android:textSize="26sp"
                android:text="@string/key_0"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/key_bs"
                android:textSize="26sp"
                android:text="@string/key_bs"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Button>
        </TableRow>
    </TableLayout>


</RelativeLayout>